# MariaAi-Authenticator

./: pyproject.toml  pytest.ini  requirements.txt
docs/: MariaAi.drawio.html  MariaAi_Roadmap.html  README.md  installation_guide.md
src/main/: adicionar_qr_imagens.py  qr_mariai.py
src/main/cyanet_ai/: core.py
src/main/icp/: icp_integration.py
src/main/token/: README.md
src/tests/: conftest.py  test_cyaneta_ai.py
src/utils/: tokenomics.py
